--- a/services/package.json
+++ b/services/package.json
@@ -9,14 +9,21 @@
     "watch": "ts-node-dev --respawn index.dev.ts"
   },
   "devDependencies": {
-    "module-alias": "^2.2.2",
+    "@types/node": "^14.14.11",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "module-alias": "^2.2.2"
   },
   "dependencies": {
+    "apollo-server": "^2.19.0",
+    "apollo-server-express": "^2.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "5.22.3",
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^1.1.0"
   }
