--- a/services/package.json
+++ b/services/package.json
@@ -9,15 +9,24 @@
     "watch": "ts-node-dev --respawn index.dev.ts"
   },
   "devDependencies": {
-    "module-alias": "^2.2.2",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "@types/bluebird": "3.5.29",
+    "@types/node": "12.12.14",
+    "@types/validator": "12.0.1",
+    "module-alias": "2.2.2",
+    "ts-node-dev": "1.0.0-pre.44",
+    "typescript": "3.7.2"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0",
-    "sequelize-typescript": "^1.1.0"
+    "apollo-server": "2.9.12",
+    "apollo-server-express": "2.9.12",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "mysql2": "2.0.1",
+    "reflect-metadata": "0.1.13",
+    "sequelize": "5.21.2",
+    "sequelize-cli": "5.5.1",
+    "sequelize-typescript": "1.0.0"
   }
 }
