--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,16 @@
     "typescript": "3.7.2"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.1.3",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link-http": "1.5.16",
+    "bootstrap": "4.0.0",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-apollo": "3.1.3",
+    "react-dom": "^17.0.1",
+    "styled-components": "4.4.1"
   }
 }
