--- a/app/package.json
+++ b/app/package.json
@@ -7,19 +7,21 @@
     "watch": "parcel --port=7001 src/index.html"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "parcel-bundler": "^1.12.4",
     "typescript": "3.7.2"
   },
   "dependencies": {
-    "@apollo/react-hooks": "3.1.3",
-    "apollo-cache-inmemory": "1.6.3",
-    "apollo-client": "2.6.4",
-    "apollo-link-http": "1.5.16",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "bootstrap": "4.0.0",
-    "graphql": "14.5.8",
-    "graphql-tag": "2.10.1",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "react": "^17.0.1",
-    "react-apollo": "3.1.3",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "styled-components": "4.4.1"
   }
