--- a/app/package.json
+++ b/app/package.json
@@ -20,9 +20,11 @@
     "bootstrap": "4.0.0",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
-    "react": "^17.0.1",
+    "react": "^16.8.0 || ^17",
     "react-apollo": "^3.1.5",
-    "react-dom": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": ">=16.8.0",
+    "react-hook-form": "^6.13.1",
     "styled-components": "4.4.1"
   }
 }
