--- a/app/src/tsconfig.json
+++ b/app/src/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",
     "module": "commonjs",
     "strict": true,
-    "target": "es6"
+    "target": "es6",
+    "esModuleInterop": true
   }
 }
