--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@types/react-addons-update": "^0.14.20",
+    "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
@@ -28,7 +29,11 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": ">=16.8.0",
     "react-hook-form": "^6.13.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "store": "^2.0.12",
     "styled-components": "4.4.1"
   }
 }
