--- a/app/src/tsconfig.json
+++ b/app/src/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "jsx": "react",
     "module": "commonjs",
-    "strict": true,
+    "strict": false,
     "target": "es6",
     "esModuleInterop": true
   }
