--- a/app/package.json
+++ b/app/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "parcel --port=7001 src/index.html"
+    "watch": "parcel --port=7001 src/index.html",
+    "test": "jest --watchAll"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "jest": "^26.6.3",
     "parcel-bundler": "^1.12.4",
     "typescript": "3.7.2"
   },
