--- a/services/package.json
+++ b/services/package.json
@@ -7,10 +7,11 @@
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo",
     "watch": "ts-node-dev --respawn index.dev.ts",
-    "test": "jest --watchAll"
+    "test": "jest "
   },
   "devDependencies": {
     "@types/bluebird": "3.5.29",
+    "@types/jest": "^26.0.20",
     "@types/node": "12.12.14",
     "@types/validator": "12.0.1",
     "jest": "^26.6.3",
@@ -26,10 +27,26 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "graphql-request": "^3.4.0",
     "mysql2": "2.0.1",
     "reflect-metadata": "0.1.13",
     "sequelize": "5.21.2",
     "sequelize-cli": "5.5.1",
     "sequelize-typescript": "1.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "verbose": false,
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
