--- a/services/package.json
+++ b/services/package.json
@@ -18,7 +18,7 @@
     "module-alias": "2.2.2",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "1.0.0-pre.44",
-    "typescript": "3.7.2"
+    "typescript": "^3.8.2"
   },
   "dependencies": {
     "apollo-server": "2.9.12",
@@ -28,7 +28,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "graphql-request": "^3.4.0",
-    "mysql2": "2.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "0.1.13",
     "sequelize": "5.21.2",
     "sequelize-cli": "5.5.1",
